--- a/tools/pdf-context-labeling.html
+++ b/tools/pdf-context-labeling.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Viewer with Bounding Box and Zoom</title>
+    <title>PDF Context Labeling</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.9.359/pdf.min.js"></script>
     <style>
         body {
