add prompt formatter

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         // List of available tools
         const tools = [
             { name: "PDF Context Labeling", path: "tools/pdf-context-labeling.html" },
+            { name: "Prompt Formatter", path: "tools/prompt-formatter.html" },
             // Add more tools as needed
         ];
 
